1999-09-09  James Henstridge  <james@daa.com.au>

	* app/commands.c (file_gnome_print_callback): added support for
	scaling the diagram.  Also fixed a few other bugs.

	* app/paginate_gnomeprint.c (print_page): added ability to scale
	document.  Fixed up test to see if the page has no objects on it.
	This should prevent some blank pages being printed.  Non square
	objects such as lines could still cause problems.

1999-09-08  James Henstridge  <james@daa.com.au>

	* app/commands.c (file_gnome_print_callback): changed from using the
	standard printer selection dialog to one that also has a paper size
	selector as well.

	* commands.[ch]: added callbacks for the print menu item.  Currently
	it only does A4 output.  I will make it configurable soon.
	
	* app/menus.c: add a print diagram menu item if gnome-print support
	is enabled.
	
	* app/paginate_gnomeprint.c, app/paginate_gnomeprint.h: this is a
	bit higher level than the gnome-print renderer.  It splits the
	diagram into page size chunks and then renders them.  For each
	page, it only renders the objects whose bounding box intersects
	the page, and it sets the clip mask so that the diagram does not
	overlap the margins.
	
	* app/render_gnomeprint.c, app/render_gnomeprint.h: added a renderer
	that uses gnome-print as its back end.
	
	* configure.in: added a check for gnome-print.  It is disabled by
	default because the code is not really working correctly yet.

	* app/menus.c: the delete object menu item was missing from the
	GnomeUIInfo style menus.

1999-09-07  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* configure.in
	Added japanese to ALL_LINGUAS.
	Fix for Linux on Alpha.

1999-09-07  Alexander Larsson  <alla@lysator.liu.se>

	* app/create_object.c (create_object_button_press):
	Always initialize tool->obj. Otherwise we store a null
	in the undo Change.

	* lib/text.c:
	Set linestyle before drawing cursor.
	Fix undo of backwards delete.

1999-09-05  James Henstridge  <james@daa.com.au>
